# Machine-Learning-Basics

./: README.md  pyproject.toml
lab1/: lab1.html  lab1.ipynb
lab2/: lab2.html  lab2.ipynb
lab3/: lab3.html  lab3.ipynb
lab4/: lab4.html  lab4.ipynb
lab5/: lab5.html  lab5.ipynb
lab6/: lab6.ipynb
