[project]
name = "basics-of-machine-learning"
version = "1.0.0"
description = ""
authors = [{name = "Jakub Adamczyk (j-adamczyk)", email = "jadamczy@agh.edu.pl"}]
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "feature-engine",
    "imbalanced-learn",
    "jupyter",
    "matplotlib",
    "pandas==2.*",
    "pillow",
    "pyarrow",
    "pynndescent",
    "pyod",
    "scikit-fingerprints",
    "scikit-learn",
    "seaborn",
    "sentence_transformers",
    "torch",
    "tqdm",
    "llvmlite==0.44.0",
    "numba==0.61.0",
    "nbclassic",
    "notebook",
    "scikit-learn-extra",
    "xgboost"
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff"
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]
exclude = ["**notebook.ipynb"]
